# stock-recognizer

./: .gitignore  CLAUDE.md  README.md  errors_v15.json  errors_v17.json  errors_v18.json  next_training_plan.md  prompt.txt  pyproject.toml  requirements.txt  response.json  v16_plan.md  v19_training_plan.md
.github/workflows/: publish.yml  pytest.yml  version-check.yml
data/: wallstreetbets_posts.csv
data/augmented/: augmented_m0_labeled_100.json  augmented_m0_labeled_200.json  augmented_m0_labeled_300.json  augmented_m0_labeled_final.json  augmented_m1_labeled_100.json  augmented_m1_labeled_200.json  augmented_m1_labeled_300.json  augmented_m1_labeled_final.json  augmented_m2_labeled_100.json  augmented_m2_labeled_200.json  augmented_m2_labeled_300.json  augmented_m2_labeled_final.json  augmented_m3_labeled_100.json  augmented_m3_labeled_200.json  augmented_m3_labeled_300.json  augmented_m3_labeled_final.json  augmented_m4_labeled_100.json  augmented_m4_labeled_200.json  augmented_m4_labeled_300.json  augmented_m4_labeled_final.json
data/auto_label/: prompt.txt
data/labeled/: labeled_100.json  (+18 more)
stock_recognizer/: __init__.py  constants.py  engine.py
tests/: test_auto_label.py  test_benchmark.py  test_engine.py  test_scraper.py
trainer/: augment_data.py  benchmark.py  cleaner.py  error_analysis.py  fix_label_policy.py  patch_test_labels.py  scraper.py  split_test_set.py  test.py  threshold_sweep.py  train.py  validate_descriptions.py
utils/: augment_data.py  auto_label.py  check_labeled_duplicates.py  clean_kaggle.py  mine_hard_negatives.py  scraper.py
(+7 files in other folders)
